project/k8s/ingress/project.v1.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project

spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service: 
                name: todo-app-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: todo-app-service
                port:
                  number: 3000
